--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -1,9 +1,19 @@
-name: Npm install steps
+name: npm build workflow
 on: [push]
 
 jobs:
-  run-npm-install:
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
+
     steps:
-      - name: install npm
-        run: npm install
+    - uses: actions/checkout@v3
+    - name: Use node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm install
